Some amends and trying to fix scrolling in suggestions on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -34,8 +34,7 @@ h1.logo {
   height: 25vh;
   color: #fff;
   padding: 1rem;
-  margin: 2rem -1rem;
-  margin-bottom: 1rem;
+  margin: 2rem -1rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,6 +43,9 @@ h1.logo {
 .movie-quote-container #movie-quote {
   padding: 1rem;
 }
+
+
+/* CLUES */
 
 #clues {
   margin-bottom: 1rem;
@@ -58,6 +60,7 @@ h1.logo {
   align-items: center;
   padding: 1rem;
   transition: transform 0.3s ease, opacity 0.3s ease;
+  margin-bottom: .25rem;
 }
 #current-clue.placeholder {
   opacity: .5;
@@ -90,7 +93,7 @@ h1.logo {
   padding: 0.5rem 1rem;
   font-weight: bold;
   font-size: 1rem;
-  border-radius: 5px;
+  border-radius: 300px;
   border: none;
   background: #888;
   color: #fff;
@@ -119,7 +122,6 @@ h1.logo {
 .autocomplete-wrapper {
   position: relative;
   display: flex;
-  margin-bottom: 1rem;
   width: 100%;
 }
 
@@ -129,7 +131,8 @@ h1.logo {
   left: 0;
   width: 100%;
   max-height: 160px;
-  overflow-y: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -139,6 +142,7 @@ h1.logo {
   border-radius: 8px;
   z-index: 10;
   font-family: 'Arial';
+  z-index: 2000;
 }
 
 .autocomplete-list li {
@@ -155,11 +159,30 @@ h1.logo {
 /* INPUT & BUTTONS */
 
 input[type="text"] {
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  border-radius: 8px;
-  border: 2px solid #ffcc00;
+  padding: .75rem;
+  padding-inline: 3rem;
+  font-size: 1.2rem;
+  border-radius: .5rem;
+  border: 2px solid black;
   width: 100%;
+}
+
+.input-with-icon {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.input-with-icon input {
+  padding-left: 2rem;
+}
+
+.search-icon {
+  position: absolute;
+  left: 0.75rem;
+  font-size: 1rem;
+  pointer-events: none; /* so clicks go through to the input */
+  color: #666;
 }
 
 button {
@@ -195,6 +218,11 @@ button {
   background: #330000;
   padding: 0.3rem 0.6rem;
   border-radius: 6px;
+}
+
+
+p.result-banner {
+  width: 100%;
 }
 
 
